# dpdrawing

./: .gitignore  ;  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SDL2Test  cmake_install.cmake  main.cpp  main.h  todo
.ccls-cache/@@home@fire@Git@DPDrawing/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno.h.blob  (+146 more)
classes/: Button.cpp  Button.h  ButtonHandler.cpp  ButtonHandler.h  Circle.cpp  Circle.h  Command.h  Component.h  Composite.h  DrawCircle.cpp  DrawCircle.h  DrawCommand.h  DrawRectangle.h  DrawShape.h  Drawer.h  Group.h  Invoker.cpp  Invoker.h  MouseHandler.cpp  MouseHandler.h  Pixel.cpp  Pixel.h  Rectangle.cpp  Rectangle.h  SDL2_gfx.cpp  SDL2_gfx.h  SDL2_gfx_ellipse.cpp  SDL2_gfx_ellipse.h  Selectable.cpp  Selectable.h  Shape.cpp  Shape.h  ShapeDecorator.h  Shape_old.cpp  Shape_old.h  TextureManager.cpp  TextureManager.h  UndoHandler.cpp  UndoHandler.h
commandpattern/: Draw.cpp  Draw.h  DrawCircle.cpp  DrawCircle.h  DrawRectangle.cpp  DrawRectangle.h  DrawShape.h  Drawer.cpp  Drawer.h  Shape.cpp  Shape.h  reserve.cpp
saves/: objects.json  saved.json  undo.json
sdlgui/: button.cpp  button.h  checkbox.cpp  colorpicker.cpp  colorpicker.h  colorwheel.h  combobox.cpp  common.cpp  common.h  formhelper.h  graph.cpp  graph.h  imagepanel.cpp  imagepanel.h  imageview.cpp  imageview.h  label.cpp  label.h  layout.cpp  loadimages.cpp  messagedialog.cpp  messagedialog.h  popup.cpp  popupbutton.cpp  progressbar.cpp  progressbar.h  screen.cpp  screen.h  sdlguii.h  slider.cpp  slider.h  stackedwidget.cpp  stackedwidget.h  switchbox.h  tabheader.cpp  tabheader.h  tabwidget.h  textbox.cpp  textbox.h  theme.h  (+5 more)
(+38 files in other folders)
